# confers

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  FIX_SUMMARY.md  Makefile  README.md  README_en.md  README_zh.md  USER_GUIDE.md  config-schema.json  config-types.ts  deny.toml  docker-compose.test.yml  fix_review_issues.sh  test_all_features.sh
.github/: dependabot.yml
benches/: common.rs  concurrent_access_bench.rs  concurrent_rw_bench.rs  config_benchmark.rs  cow_efficiency_bench.rs  dynamic_field_bench.rs  hot_path_bench.rs  incremental_merge_bench.rs  interpolation_bench.rs  load_bench.rs  merge_bench.rs  value_path_bench.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  types.rs  utils.rs
confers-cli/: Cargo.toml
confers-cli/src/: main.rs
confers-cli/src/commands/: completions.rs  generate.rs  wizard.rs
confers-cli/tests/: test_cli.rs
confers-macros/: CHANGELOG.md  Cargo.toml
confers-macros/src/: lib.rs  parse.rs
confers-macros/src/codegen/: clap.rs  defaults.rs  load.rs  migration.rs  mod.rs  modules.rs  schema.rs  security.rs  validate.rs
config-snapshots/: config-20260313T112431Z.toml
docs/: API_REFERENCE.md  CHANGELOG.md  CONFIG_MACRO_GUIDE.md  CONTRIBUTING.md  FAQ.md  LIBRARY_INTEGRATION.md  PERFORMANCE.md  SECURITY.md  USER_GUIDE.md  architecture_decisions.md  code_review_fixes.md  optimization_summary.md
examples/: Cargo.toml  README.md  basic.rs  compat_api.rs  hot_reload.rs  library_usage.rs  minimal.rs  nested.rs  remote_config.rs  run_example.sh  validation.rs  verify_examples.sh  watch.toml
examples/advanced/: audit.rs  tls.rs
examples/config/: config.toml  progressive.toml
examples/config-snapshots/: config-20260313T092753Z.toml  config-20260313T092754Z.toml
examples/configs/: app.toml  database.json  remote.toml
examples/src/01-basics/: 01-basics-basic.rs  01-basics-default_values.rs  01-basics-env_override.rs  01-basics-minimal.rs  README.md
examples/src/01-basics/configs/: basic.toml  default_values.toml  env_override.toml  minimal.toml
examples/src/02-validation/: 02-validation-advanced_validation.rs  02-validation-basic_validation.rs  02-validation-custom_validators.rs  02-validation-validation_errors.rs  README.md
examples/src/02-validation/configs/: invalid.toml  valid.toml
examples/src/03-formats/: 03-formats-auto_detection.rs  03-formats-ini_example.rs  03-formats-json_example.rs  03-formats-toml_example.rs  03-formats-yaml_example.rs  README.md
examples/src/03-formats/configs/: config.ini  config.json  config.toml  config.yaml
examples/src/04-nested/: 04-nested-array_fields.rs  04-nested-deep_nesting.rs  04-nested-nested_structs.rs  README.md
examples/src/04-nested/configs/: deep_nested.json  nested.toml
examples/src/05-watch-reload/: 05-watch-reload-basic_watch.rs  05-watch-reload-debounce.rs  README.md
examples/src/05-watch-reload/configs/: watch.toml
examples/src/06-encryption/: 06-encryption-basic_encryption.rs  06-encryption-decrypt_config.rs  06-encryption-encrypt_sensitive.rs  06-encryption-key_management.rs  README.md
examples/src/06-encryption/configs/: encrypted.toml  plain.toml
examples/src/07-remote/: 07-remote-consul_remote.rs  07-remote-etcd_remote.rs  07-remote-fallback.rs  07-remote-http_remote.rs  07-remote-tls_config.rs  README.md
examples/src/07-remote/configs/: fallback.toml  remote.toml
examples/src/08-audit/: 08-audit-audit_history.rs  08-audit-basic_audit.rs  08-audit-sensitive_fields.rs  README.md
examples/src/08-audit/configs/: audit.toml
examples/src/09-schema/: 09-schema-json_schema.rs  09-schema-schema_validation.rs  09-schema-typescript_types.rs  README.md
examples/src/09-schema/configs/: schema.toml
examples/src/10-diff/: 10-diff-basic_diff.rs  10-diff-diff_formats.rs  10-diff-diff_report.rs  README.md
examples/src/10-diff/configs/: config_v1.toml  config_v2.toml
examples/src/11-cli-tools/: 11-cli-tools-diff_command.rs  11-cli-tools-encrypt_command.rs  11-cli-tools-generate_command.rs  11-cli-tools-key_command.rs  11-cli-tools-validate_command.rs  11-cli-tools-wizard_command.rs  README.md
examples/src/11-cli-tools/configs/: config1.toml  config2.toml
examples/src/12-advanced/: 12-advanced-custom_sanitizer.rs  12-advanced-memory_limit.rs  12-advanced-parallel_validation.rs  12-advanced-ssrf_protection.rs  12-advanced-system_monitoring.rs  README.md
examples/src/12-advanced/configs/: large_config.toml  remote_url.toml  sanitizer.toml
examples/src/13-wizard/: 13-wizard-basic_wizard.rs  13-wizard-template_generation.rs  README.md
examples/src/13-wizard/configs/: template.toml  wizard.toml
examples/src/14-compat/: 14-compat-config_rs_compat.rs  14-compat-migration_guide.rs  README.md
examples/src/15-complete/: 15-complete-development_app.rs  15-complete-multi_source.rs  15-complete-production_app.rs  README.md
examples/src/15-complete/configs/: base.toml  dev.toml
examples/src/15-complete/configs/secrets/: encrypted.toml
examples/src/examples/: audit.rs  basic_usage.rs  cli_integration.rs  config_bus.rs  config_groups.rs  context_aware.rs  dynamic_fields.rs  encryption.rs  full_stack.rs  hot_reload.rs  interpolation.rs  json_schema.rs  key_rotation.rs  metrics.rs  migration.rs  modules_demo.rs  progressive_reload.rs  remote_consul.rs  remote_etcd.rs  security.rs  snapshot.rs  validation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: interpolation.rs  json_parse.rs  merger.rs  parser.rs  toml_parse.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: codegen.rs  lib.rs  parse.rs
macros/src/codegen/: clap.rs  defaults.rs  load.rs  migration.rs  mod.rs  modules.rs  schema.rs  security.rs  validate.rs
macros/src/confers_common/: errors.rs  mod.rs  types.rs  utils.rs
scripts/: install-pre-commit.sh  pre-commit  security_audit.sh  setup_ci_cd.sh
src/: audit.rs  config.rs  constants.rs  context.rs  dynamic.rs  error.rs  error_helpers.rs  format.rs  interface.rs  interpolation.rs  lib.rs  lifecycle.rs  loader.rs  main.rs  (+9 more)
(+314 files in other folders)
