[package]
name = "confers"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
description = "Production-ready Rust configuration library with zero boilerplate"
license = "MIT OR Apache-2.0"

[dependencies]
arc-swap = { version = "1.8.2", optional = true }
async-trait = { version = "0.1.89", optional = true }
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", optional = true }
chrono = { version = "0.4.44", optional = true, features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"], optional = true }
compact_str = { version = "0.9.0", features = ["serde"] }
confers-macros = { version = "0.3.0", path = "confers-macros" }
dashmap = { version = "6.1.0", optional = true }
garde = { version = "0.22.0", optional = true, features = ["derive", "email", "url", "regex"] }
futures-util = { version = "0.3.31", optional = true }
hkdf = { version = "0.12.4", optional = true }
indexmap = { version = "2.11.4", features = ["serde"] }
metrics = { version = "0.24.3", optional = true }
notify-debouncer-full = { version = "0.6.0", optional = true }
reqwest = { version = "0.13.2", features = ["json", "rustls"], optional = true }
schemars = { version = "1.2.1", optional = true }
secrecy = { version = "0.10.3", features = ["serde"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.9", optional = true }
thiserror = "2.0.18"
regex = "1.11.1"
anyhow = "1"
tokio = { version = "1.49.0", features = ["rt", "sync", "time", "fs"], optional = true }
toml = { version = "1.0.3", features = ["preserve_order"], optional = true }
tracing = "0.1.44"
zeroize = { version = "1.8.2", features = ["derive"], optional = true }
tokio-stream = { version = "0.1.18", features = ["sync"], optional = true }
etcd-client = { version = "0.18.0", features = ["tls"], optional = true }
consul-client = { version = "0.1.0-alpha.0", optional = true }
redis = { version = "0.32.7", features = ["tokio-comp"], optional = true }
url = "2.5.2"

[workspace]
members = ["confers-macros", "confers-cli", "examples/full_stack"]

[features]
default = ["toml", "json", "env"]

# Format support
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml_ng"]
ini = []
env = []

# Core features
validation = ["dep:garde"]
watch = ["dep:notify-debouncer-full", "dep:tokio", "dep:arc-swap"]
encryption = ["dep:chacha20poly1305", "dep:hkdf", "dep:sha2", "dep:secrecy", "dep:zeroize"]
cli = ["dep:clap"]
schema = ["dep:schemars"]
metrics = ["dep:metrics"]
dynamic = ["dep:arc-swap", "dep:tokio"]
progressive-reload = ["watch", "dep:arc-swap", "dep:async-trait"]
audit = ["dep:chrono"]
migration = ["dep:chrono"]
snapshot = ["dep:chrono", "dep:tokio", "json", "toml", "yaml", "dynamic"]
profile = []
interpolation = []
hot-reload = ["watch"]

# Remote sources
remote = ["dep:reqwest", "dep:async-trait", "dep:tokio"]

# Remote SDK integrations
etcd = ["dep:etcd-client", "dep:tokio", "dep:async-trait", "toml", "json", "yaml"]
consul = ["dep:consul-client", "dep:tokio", "dep:async-trait", "dep:reqwest", "toml", "json", "yaml"]
cache-redis = ["dep:redis", "dep:tokio", "dep:async-trait", "dep:tokio-stream"]

# Message bus
config-bus = ["dep:tokio", "dep:async-trait", "dep:futures-util", "dep:chrono", "dep:tokio-stream"]

# Context-aware
context-aware = []

# Modules
modules = []

# Feature presets
recommended = ["toml", "env", "validation"]
dev = ["toml", "json", "yaml", "env", "cli", "validation", "schema", "audit", "profile", "watch", "migration", "snapshot", "dynamic"]
production = ["toml", "env", "watch", "encryption", "validation", "audit", "profile", "metrics", "schema", "cli", "migration", "dynamic", "progressive-reload", "snapshot"]
full = ["toml", "json", "yaml", "env", "cli", "validation", "watch", "encryption", "schema", "metrics", "dynamic", "progressive-reload", "audit", "migration", "snapshot", "profile", "interpolation", "hot-reload", "remote", "config-bus", "context-aware", "modules", "etcd", "consul", "cache-redis"]
minimal = ["env"]
distributed = ["toml", "env", "watch", "validation", "config-bus", "progressive-reload", "metrics", "audit"]
etcd-client = ["dep:etcd-client"]
consul-client = ["dep:consul-client"]
redis = ["dep:redis"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
proptest = "1.8.0"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
