[package]
name = "confers"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
description = "Production-ready Rust configuration library with zero boilerplate"
license = "MIT"
authors = ["Kirky <Kirky-X@outlook.com>"]
repository = "https://github.com/Kirky-X/confers"
homepage = "https://github.com/Kirky-X/confers"
documentation = "https://docs.rs/confers"
keywords = ["config", "configuration", "settings", "env"]
categories = ["config", "development-tools::build-tools"]

[dependencies]
arc-swap = { version = "1.8", optional = true }
async-nats = { version = "0.40", optional = true }
async-stream = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
base64 = "0.22"
chacha20poly1305 = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"], optional = true }
compact_str = { version = "0.9", features = ["serde"] }
confers-macros = { version = "0.3.0", path = "confers-macros" }
dashmap = { version = "6.1", optional = true }
garde = { version = "0.22", optional = true, features = ["derive", "email", "url", "regex"] }
futures-util = { version = "0.3", optional = true }
hkdf = { version = "0.12", optional = true }
indexmap = { version = "2.11", features = ["serde"] }
metrics = { version = "0.24", optional = true }
notify-debouncer-full = { version = "0.6", optional = true }
reqwest = { version = "0.13", features = ["json", "rustls"], optional = true }
schemars = { version = "1.2", optional = true }
secrecy = { version = "0.10", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "2.0"
regex = "1.11"
anyhow = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "fs"], optional = true }
toml = { version = "1.0", features = ["preserve_order"], optional = true }
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
etcd-client = { version = "0.18", features = ["tls"], optional = true }
consul-client = { version = "0.1.0-alpha.0", optional = true }
redis = { version = "0.32", features = ["tokio-comp"], optional = true }
url = "2.5"
rayon = { version = "1.10", optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }

[workspace]
members = ["confers-macros", "confers-cli", "examples", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
description = "Production-ready Rust configuration library with zero boilerplate"
license = "MIT OR Apache-2.0"
authors = ["Kirky <Kirky-X@outlook.com>"]
repository = "https://github.com/Kirky-X/confers"
homepage = "https://github.com/Kirky-X/confers"
documentation = "https://docs.rs/confers"
keywords = ["config", "configuration", "settings", "env"]
categories = ["config", "development-tools::build-tools"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
compact_str = { version = "0.9", features = ["serde"] }
darling = "0.20"
indexmap = { version = "2.11", features = ["serde"] }
proc-macro2 = "1"
proptest = "1.8"
quote = "1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
similar = "2"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "sync", "time", "fs"] }
toml = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
trybuild = "1"

[features]
default = ["toml", "json", "env"]

# Format support
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml_ng"]
ini = []
env = []

# Core features
validation = ["dep:garde"]
parallel = ["dep:rayon"]
typescript-schema = ["dep:schemars"]
security = ["encryption", "dep:hex"]
key = ["encryption", "dep:chrono", "dep:rand", "dep:hex"]
tracing = []
watch = ["dep:notify-debouncer-full", "dep:tokio", "dep:arc-swap"]
encryption = ["dep:chacha20poly1305", "dep:hkdf", "dep:sha2", "dep:secrecy", "dep:zeroize", "dep:async-trait", "dep:tokio"]
cli = ["dep:clap"]
schema = ["dep:schemars"]
metrics = ["dep:metrics"]
dynamic = ["dep:arc-swap", "dep:tokio", "dep:dashmap"]
progressive-reload = ["watch", "dep:arc-swap", "dep:async-trait"]
audit = ["dep:chrono"]
migration = ["dep:chrono"]
snapshot = ["dep:chrono", "dep:tokio", "json", "toml", "yaml", "dynamic"]
profile = []
interpolation = []
hot-reload = ["watch"]

# Preload validation
preload-validator = ["dep:async-trait", "dep:tokio"]

# Poll sources
poll = ["remote", "dep:reqwest"]

# Vault integration
vault = ["dep:reqwest", "dep:async-trait", "dep:tokio"]

# Remote sources
remote = ["dep:reqwest", "dep:async-trait", "dep:tokio"]

# Remote SDK integrations
etcd = ["remote", "dep:etcd-client", "dep:tokio", "dep:async-trait", "dep:reqwest", "toml", "json", "yaml"]
consul = ["remote", "dep:consul-client", "dep:tokio", "dep:async-trait", "dep:reqwest", "toml", "json", "yaml"]
cache-redis = ["dep:redis", "dep:tokio", "dep:async-trait", "dep:tokio-stream"]

# Message bus
config-bus = ["dep:tokio", "dep:async-trait", "dep:futures-util", "dep:chrono", "dep:tokio-stream"]
nats-bus = ["config-bus", "dep:async-nats"]
redis-bus = ["config-bus", "dep:redis", "dep:async-stream"]

# Context-aware
context-aware = []

# Modules
modules = []

# Feature presets
recommended = ["toml", "env", "validation", "json"]
dev = ["toml", "json", "yaml", "env", "cli", "validation", "schema", "audit", "profile", "watch", "migration", "snapshot", "dynamic"]
production = ["toml", "env", "watch", "encryption", "validation", "audit", "profile", "metrics", "schema", "cli", "migration", "dynamic", "progressive-reload", "snapshot"]
full = ["toml", "json", "yaml", "env", "cli", "validation", "watch", "encryption", "schema", "metrics", "dynamic", "progressive-reload", "audit", "migration", "snapshot", "profile", "interpolation", "hot-reload", "remote", "config-bus", "context-aware", "modules", "etcd", "consul", "cache-redis", "preload-validator", "poll", "vault"]
minimal = ["env", "json"]
distributed = ["toml", "env", "watch", "validation", "config-bus", "progressive-reload", "metrics", "audit"]
etcd-client = ["dep:etcd-client"]
consul-client = ["dep:consul-client"]

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
proptest = "1.8"
tempfile = "3.27"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[profile.dev.package]
confers = { opt-level = 2 }

[[bench]]
name = "merge_bench"
harness = false
required-features = ["interpolation"]

[[bench]]
name = "incremental_merge_bench"
harness = false

[[bench]]
name = "load_bench"
harness = false

[[bench]]
name = "dynamic_field_bench"
harness = false
required-features = ["dynamic"]

[[bench]]
name = "concurrent_access_bench"
harness = false
required-features = ["dynamic"]

[[bench]]
name = "interpolation_bench"
harness = false
required-features = ["interpolation"]

[[bench]]
name = "value_path_bench"
harness = false
required-features = ["interpolation"]

[[bench]]
name = "cow_efficiency_bench"
harness = false
path = "benches/cow_efficiency_bench.rs"
