[package]
name = "confers-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
description = "CLI diagnostics tool for confers configuration library"

[[bin]]
name = "confers"
path = "src/main.rs"

[dependencies]
confers = { path = "..", features = ["full"] }
clap = { version = "4", features = ["derive", "env", "color"] }
anyhow = "1"
serde_json = "1"
toml = "0.5"
serde_yaml_ng = "0.10"
similar = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
