[package]
name = "confers-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "confers"
path = "src/main.rs"

[dependencies]
confers = { path = "..", features = ["full"] }
clap = { workspace = true, features = ["derive", "env", "color"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
similar = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
