[package]
name = "confers-examples"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "basic_usage"
path = "src/examples/basic_usage.rs"

[[bin]]
name = "hot_reload"
path = "src/examples/hot_reload.rs"

[[bin]]
name = "remote_consul"
path = "src/examples/remote_consul.rs"

[[bin]]
name = "encryption"
path = "src/examples/encryption.rs"

[[bin]]
name = "key_rotation"
path = "src/examples/key_rotation.rs"

[[bin]]
name = "migration"
path = "src/examples/migration.rs"

[[bin]]
name = "dynamic_fields"
path = "src/examples/dynamic_fields.rs"

[[bin]]
name = "config_groups"
path = "src/examples/config_groups.rs"

[[bin]]
name = "progressive_reload"
path = "src/examples/progressive_reload.rs"

[[bin]]
name = "full_stack"
path = "src/examples/full_stack.rs"

[[bin]]
name = "config_bus"
path = "src/examples/config_bus.rs"

[[bin]]
name = "snapshot"
path = "src/examples/snapshot.rs"

[[bin]]
name = "remote_etcd"
path = "src/examples/remote_etcd.rs"

[dependencies]
confers = { path = "..", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
regex = "1"
futures = "0.3"
async-nats = "0.37"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde_yaml_ng = "0.10"
sha2 = "0.10"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
notify = "7.0"

[features]
default = []
toml = ["confers/toml"]
json = ["confers/json"]
env = ["confers/env"]
watch = ["confers/watch"]
encryption = ["confers/encryption"]
dynamic = ["confers/dynamic"]
migration = ["confers/migration"]
progressive-reload = ["confers/progressive-reload"]
consul = ["confers/consul"]
remote = ["confers/remote"]
full = ["confers/full"]
