[package]
name = "confers-macros-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.confers]
path = ".."
default-features = false
features = ["full"]

[dependencies.confers-macros]
path = "../macros"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "toml_parse"
path = "fuzz_targets/toml_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_parse"
path = "fuzz_targets/json_parse.rs"
test = false
doc = false
bench = false
