[package]
name = "confers-macros"
version = "0.2.2"
edition = "2021"
authors = ["Kirky.X <kirkyx@outlook.com>"]
license = "MIT"
description = "Procedural macros for the Confers configuration management library"
documentation = "https://docs.rs/confers-macros"
homepage = "https://github.com/Kirky-X/confers"
repository = "https://github.com/Kirky-X/confers"
keywords = ["configuration", "proc-macro", "derive"]
categories = ["development-tools"]

[lib]
proc-macro = true

[features]
schema = []
watch = []
audit = []
remote = []
parallel = []
cli = []
validation = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"